# les-emplois

./: .buildpacks  .coveragerc  .editorconfig  .env.template  .envrc  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierrc  .profile  .pylintrc  .python-version  .travis.yml  AGENTS.md  Aptfile  CHANGELOG.md  CHANGELOG_breaking_changes.md  CNAME  Makefile  Procfile  README.md  base.txt  delete-2023-evaluation-invalid-job-apps  deploy.txt  deploy_prod.sh  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-staging.yml  docker-compose.yml  index.html  manage.py  migrate_tests.py  migrations.md  prod.txt  pyproject.toml  pytest.ini  setup.cfg  sftp_client.py  (+2 more)
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_request.md  feature_request.md
.github/workflows/: antivirus-scan.yml  automerge-dependabot.yml  build-metabase-final-tables.yml  ci.yml  clean-clevercloud-buckets.yml  demo-reset.yml  deploy.yaml  git.yml  imports-asp.yml  mkchangelog.yml  notify-slack.yml  populate-metabase-itou.yml  populate-metabase.yml  postgres-test-settings.sh  pr_closed.yml  require-labels.yml  review-app-creation.yml  review-app-removal.yml  review-apps.yml
clevercloud/: archive_employee_records.sh  cron.json  demo-after-success.sh  demo-and-review-app-after-success.sh  download_employee_records.sh  evaluation_campaign_notifications.sh  expire-elastic-indices.sh  http.json  import-iae.sh  populate_metabase.sh  populate_metabase_itou.sh  pre_build.sh  pre_run.sh  python.json  review-app-after-success.sh  run_management_command.sh  send_approvals_to_pe.sh  status-probes.sh  sync_employee_records.sh  transfer_employee_records.sh  update-prescriber-organization-with-api-entreprise.sh  upload_employee_records.sh  uwsgi.ini
clevercloud/crons/: populate_c1_analyses.sh  populate_metabase_emplois.sh  populate_metabase_fluxiae.sh  populate_metabase_matomo.sh  test-errexit.sh
components/badge/: badge.html  badge.py
components/calendar/: calendar.html  calendar.py
components/info/: info.html  info.py
components/title/: title.html  title.py
config/: components.py  sentry.py  urls.py  urls_demo.py  wsgi.py
config/settings/: _sentry.py  base.py  clever_cloud.py  demo.py  dev.py  dev.py.template  prod.py  review_apps.py  staging.py  test.py
doc/apply_workflow.shapesdoc/: composition_data.plist
doc/multi_siret_workflow.shapesdoc/: composition_data.plist
doc/secure_siae_signup_workflow.shapesdoc/: composition_data.plist
docker/common/: psql_init.sh
docker/prod/: uwsgi.ini
docker/review_apps/: Dockerfile  entrypoint.sh  uwsgi.ini
docker/staging/: uwsgi.ini
docs/: Docker.md  backup.md  coding-style.md  developing.md  environment.md  javascript.md
docs/logique-metier/: 01-utilisateurs-authentification.md  02-organisations.md  03-candidatures.md  04-eligibilite-agrements.md  05-offres-emploi.md  06-fiches-salarie-asp.md  07-campagnes-evaluation.md  08-communication-notifications.md  09-integrations-apis.md  10-tableaux-bord.md  11-gps.md  12-recherche.md  13-gestion-fichiers.md  14-admin.md  15-securite-conformite.md  16-fonctionnalites-diverses.md  README.md
envs/: README.md  dev.env.template  local.env  secrets.env.template
exports/: readme.md
imports/: README.md
itou/: conftest.py  truc.py  wsgi.py
itou/accounts/: forms.py  tests.py  urls.py  views.py
itou/admin/: apps.py  sites.py  views.py
itou/allauth_adapters/: apps.py
itou/analytics/: admin.py  api_usage.py  approvals.py  apps.py  archive.py  employee_record.py  factories.py  models.py  tech.py  users.py
itou/antivirus/: admin.py  apps.py  models.py
itou/api/: README-FS-SSII.md  README.md  __init__.py  admin.py  auth.py  changelog.py  errors.py  models.py  pagination.py  redoc_views.py  serializers.py  tests.py  throttling.py  urls.py  views.py
itou/approvals/: admin.py  admin_forms.py  admin_views.py  apps.py  constants.py  enums.py  export.py  factories.py  models.py  notifications.py  perms.py  test_notify_pole_emploi.py  tests.py  utils.py
itou/archive/: admin.py  anonymize.py  apps.py  constants.py  models.py  tasks.py  utils.py
itou/asp/: __init__.py  admin.py  apps.py  constants.py  exceptions.py  factories.py  forms.py  models.py  tests.py  typing.py  utils.py
itou/cities/: admin.py  factories.py  models.py  sample-cities.csv  tests.py  urls.py  views.py
itou/communications/: __init__.py  admin.py  admin_forms.py  apps.py  cache.py  forms.py  models.py  signals.py
itou/companies/: admin.py  admin_forms.py  apps.py  enums.py  models.py  notifications.py  perms.py  serializers.py  transfer.py
itou/dora/: apps.py  models.py  opening_hours.py
itou/eligibility/: admin.py  admin_form.py  apps.py  criteria.py  enums.py  factories.py  forms.py  models.py  tasks.py  tests.py  utils.py
itou/eligibility_requirements/: admin.py  apps.py  models.py  tests.py
itou/emails/: admin.py  apps.py  managers.py  models.py  notifications.py  tasks.py
itou/employee_record/: __init__.py  admin.py  apps.py  common_management.py  constants.py  enums.py  exceptions.py  factories.py  models.py  serializers.py  tests.py  typing.py  utils.py
itou/employment/: models.py
itou/external_data/: __init__.py  actors.py  admin.py  apis.py  apps.py  data_import.py  enums.py  models.py  signals.py  tasks.py  tests.py
itou/files/: admin.py  apps.py  forms.py  models.py  tests.py
itou/fixtures/: jobs.json  (+5 more)
requirements/: base.in  base.txt  demo.txt  deploy.in  deploy.txt  dev-mac.txt  dev.in  dev.txt  prod.in  prod.txt  staging.txt  test.in  test.txt
scripts/: antivirus-daily.sh  antivirus-monthly.sh  clever-deploy  create-fast-machine.sh  create-sidecar-instance.sh  delete-bucket  delete-buckets  deploy_prod.sh  eligible_diff.sh  expire-elastic-indices  export_infos_sanctions.py  import-ea-eatt.sh  import-iae.sh  import-latest-db-backup.sh  imports-asp.sh  mkchangelog  move-factories.py  reset  restore_latest_backup.sh  upload_itou_theme.sh
tests/: conftest.py  test_consistency.py  test_sentry.py
(+4592 files in other folders)
