[project]
requires-python = ">=3.13"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
# see prefixes in https://beta.ruff.rs/docs/rules/
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP",  # pyupgrade
    "TID",  # flake8-tidy-imports
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["itou"]
lines-after-imports = 2

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.djlint]
profile="django"
ignore="H006,H014,H017,H023,H030,H031,T002,T003"
custom_blocks="buttons,endbuttons"
max_attribute_length=200
preserve_blank_lines=true
extend_exclude = "itou/templates/utils/widgets/duet_date_picker_widget.html"
format_css = true
format_js = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
FAIL_INVALID_TEMPLATE_VARS = true
python_files = ["tests*.py", "test_*.py"]
filterwarnings = [
    "error",
    "ignore:.*Use timezone-aware objects to represent datetimes in UTC.*:DeprecationWarning:(botocore|django_datadog_logger)",
]
addopts = [
    "--reuse-db",
    "--strict-markers",
]
markers = [
    "no_django_db: mark tests that should not be marked with django_db."
]
