[project]
name = "les-emplois"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "asgiref==3.11.1",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "bcrypt==5.0.0",
    "beautifulsoup4==4.14.3",
    "bleach[css]==6.3.0",
    "boto3==1.40.76",
    "botocore==1.40.76",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "cfgv==3.5.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.5",
    "cssbeautifier==1.15.4",
    "data-inclusion-schema==1.0.5",
    "decorator==5.2.1",
    "distlib==0.4.0",
    "django==6.0.2",
    "django-allauth==65.14.3",
    "django-anymail==14.0",
    "django-appconf==1.2.0",
    "django-bootstrap5==26.2",
    "django-citext==1.0.3",
    "django-datadog-logger==0.7.3",
    "django-debug-toolbar==6.2.0",
    "django-filter==25.2",
    "django-formtools==2.5.1",
    "django-hijack==3.7.6",
    "django-htmx==1.27.0",
    "django-markdownify==0.9.6",
    "django-otp==1.7.0",
    "django-pgtrigger==4.17.0",
    "django-redis==6.0.0",
    "django-select2==8.4.8",
    "django-storages==1.14.6",
    "django-xworkflows==1.0.0",
    "djangorestframework==3.16.1",
    "djlint==1.36.4",
    "dnspython==2.8.0",
    "drf-spectacular==0.29.0",
    "editorconfig==0.17.1",
    "email-validator==2.3.0",
    "et-xmlfile==2.0.0",
    "execnet==2.1.2",
    "executing==2.2.1",
    "factory-boy==3.3.3",
    "faker==40.4.0",
    "filelock==3.24.3",
    "freezegun==1.5.5",
    "h11==0.16.0",
    "hiredis==3.3.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huey==2.6.0",
    "identify==2.6.16",
    "idna==3.11",
    "inflection==0.5.1",
    "iniconfig==2.3.0",
    "invoke==2.2.1",
    "ipdb==0.13.13",
    "ipython==9.10.0",
    "ipython-pygments-lexers==1.1.1",
    "itoutils[django,django-testing]==26.2.12.0",
    "jedi==0.19.2",
    "jmespath==1.1.0",
    "jsbeautifier==1.15.4",
    "json-log-formatter==1.1.1",
    "json5==0.13.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jwcrypto==1.5.6",
    "lxml==6.0.2",
    "markdown==3.10.2",
    "matplotlib-inline==0.2.1",
    "nodeenv==1.10.0",
    "numpy==2.4.2",
    "openpyxl==3.1.5",
    "packaging==26.0",
    "pandas==3.0.1",
    "paramiko==4.0.0",
    "parso==0.8.6",
    "patchy==2.10.0",
    "pathspec==1.0.4",
    "pendulum==3.2.0",
    "pexpect==4.9.0",
    "pillow==12.1.1",
    "platformdirs==4.9.2",
    "pluggy==1.6.0",
    "pre-commit==4.5.1",
    "prompt-toolkit==3.0.52",
    "psycopg-binary==3.2.12",
    "psycopg[binary]==3.2.12",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycparser==3.0",
    "pycryptodomex==3.23.0",
    "pydantic-core==2.41.5",
    "pydantic[email]==2.12.5",
    "pygments==2.19.2",
    "pyjwt==2.11.0",
    "pynacl==1.6.2",
    "pypdf==6.7.1",
    "pytest==9.0.2",
    "pytest-django==4.12.0",
    "pytest-mock==3.15.1",
    "pytest-randomly==4.0.1",
    "pytest-xdist==3.8.0",
    "python-crontab==3.3.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "pyzipper==0.3.6",
    "redis==7.2.0",
    "referencing==0.37.0",
    "regex==2026.2.19",
    "requests==2.32.5",
    "requests-mock==1.12.1",
    "respx==0.22.0",
    "rich>=14.3.3",
    "rpds-py==0.30.0",
    "ruff==0.15.2",
    "s3transfer==0.14.0",
    "segno==1.6.6",
    "sentry-sdk==2.53.0",
    "shellcheck-py==0.11.0.1",
    "six==1.17.0",
    "slippers==0.6.2",
    "soupsieve==2.8.3",
    "sqlparse==0.5.5",
    "stack-data==0.6.3",
    "syrupy==5.1.0",
    "tenacity==9.1.4",
    "tinycss2==1.4.0",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "typeguard==2.13.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "unidecode==1.4.0",
    "uritemplate==4.2.0",
    "urllib3==2.6.3",
    "virtualenv==20.36.1",
    "wcwidth==0.6.0",
    "webencodings==0.5.1",
    "xlrd==2.0.2",
    "xlsx-streaming==2.0.1",
    "xworkflows==1.1.0",
    "zipstream==1.1.4",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
# see prefixes in https://beta.ruff.rs/docs/rules/
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP",  # pyupgrade
    "TID",  # flake8-tidy-imports
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["itou"]
lines-after-imports = 2

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.djlint]
profile="django"
ignore="H006,H014,H017,H023,H030,H031,T002,T003"
# partialdef is added below as a workaround for this issue: https://github.com/djlint/djLint/issues/1556
custom_blocks="buttons,endbuttons,fragment,component_title,component_navinfo,component_alert_global__acting_for,partialdef"
max_attribute_length=200
preserve_blank_lines=true
extend_exclude = "itou/templates/utils/widgets/duet_date_picker_widget.html"
format_css = true
format_js = true

[tool.pytest]
minversion = "9.0"
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests*.py", "test_*.py"]
filterwarnings = [
    "error",
    "ignore:.*Use timezone-aware objects to represent datetimes in UTC.*:DeprecationWarning:(botocore|django_datadog_logger)",
]
addopts = [
    "--reuse-db",
    "--strict-markers",
    "--pdbcls=IPython.terminal.debugger:TerminalPdb"
]
markers = [
    "no_django_db: mark tests that should not be marked with django_db."
]
